@@ -1,11 +1,12 @@
 include("shared.lua")
 
-
-
+local FlareSound = "weapons/flaregun/burn.wav"
 
 function ENT:Initialize()
 
 	self.LightUpdate = CurTime() + 0.05
+	ACE_EmitSound( FlareSound, self, 80, 100, 1 )
+	ParticleEffectAttach("ACFM_Flare",4, self,1)
 
 end
 
@@ -14,6 +15,7 @@ function ENT:Draw()
 	self:DrawModel()
 
 	if self:WaterLevel() == 3 then
+		self:StopSound( FlareSound )
 		self.StopLight = true
 	end
 
@@ -23,5 +25,8 @@ function ENT:Draw()
 	end
 end
 
+function ENT:OnRemove()
+	self:StopSound( FlareSound )
+end
 
 
