@@ -445,42 +445,42 @@ do
 		end
 
 		--For some reason, removing this will also break several things with missile code. bad
-		self.RoundId			= Data1
-		self.RoundType		= Data2							-- Type of round, IE AP, HE, HEAT ...
-		self.RoundPropellant	= Data3					or 0	-- Lenght of propellant
-		self.RoundProjectile	= Data4					or 0	-- Lenght of the projectile
-		self.RoundData5		= Data5					or 0
-		self.RoundData6		= Data6					or 0
-		self.RoundData7		= Data7					or 0
-		self.RoundData8		= Data8					or 0
-		self.RoundData9		= Data9					or 0
-		self.RoundData10		= tonumber(Data10)		or 0 -- Tracer. For some reason, both Data10 and Data are sent as strings. Needs to review this.
-		self.RoundData11		= tonumber(Data11)		or 0 -- Two Piece check
-		self.RoundData12		= Data12					or 0
-		self.RoundData13		= Data13					or 0
-		self.RoundData14		= Data14					or 0
-		self.RoundData15		= Data15					or 0
+		self.RoundId            = Data1
+		self.RoundType          = Data2							-- Type of round, IE AP, HE, HEAT ...
+		self.RoundPropellant    = Data3					or 0	-- Lenght of propellant
+		self.RoundProjectile    = Data4					or 0	-- Lenght of the projectile
+		self.RoundData5         = Data5					or 0
+		self.RoundData6         = Data6					or 0
+		self.RoundData7         = Data7					or 0
+		self.RoundData8         = Data8					or 0
+		self.RoundData9         = Data9					or 0
+		self.RoundData10        = tonumber(Data10)		or 0 -- Tracer. For some reason, both Data10 and Data are sent as strings. Needs to review this.
+		self.RoundData11        = tonumber(Data11)		or 0 -- Two Piece check
+		self.RoundData12        = Data12				or 0
+		self.RoundData13        = Data13				or 0
+		self.RoundData14        = Data14				or 0
+		self.RoundData15        = Data15				or 0
 
 
-		local PlayerData = {}	--what a mess
-		PlayerData.Id		= self.RoundId
-		PlayerData.Type		= self.RoundType
-		PlayerData.PropLength	= self.RoundPropellant
-		PlayerData.ProjLength	= self.RoundProjectile
-		PlayerData.Data5		= self.RoundData5
-		PlayerData.Data6		= self.RoundData6
-		PlayerData.Data7		= self.RoundData7
-		PlayerData.Data8		= self.RoundData8
-		PlayerData.Data9		= self.RoundData9
-		PlayerData.Tracer	= self.RoundData10
-		PlayerData.TwoPiece	= self.RoundData11
-		PlayerData.Data12	= self.RoundData12
-		PlayerData.Data13	= self.RoundData13
-		PlayerData.Data14	= self.RoundData14
-		PlayerData.Data15	= self.RoundData15
+		local PlayerData        = {}	--what a mess
+		PlayerData.Id           = self.RoundId
+		PlayerData.Type         = self.RoundType
+		PlayerData.PropLength   = self.RoundPropellant
+		PlayerData.ProjLength   = self.RoundProjectile
+		PlayerData.Data5        = self.RoundData5
+		PlayerData.Data6        = self.RoundData6
+		PlayerData.Data7        = self.RoundData7
+		PlayerData.Data8        = self.RoundData8
+		PlayerData.Data9        = self.RoundData9
+		PlayerData.Tracer       = self.RoundData10
+		PlayerData.TwoPiece     = self.RoundData11
+		PlayerData.Data12       = self.RoundData12
+		PlayerData.Data13       = self.RoundData13
+		PlayerData.Data14       = self.RoundData14
+		PlayerData.Data15       = self.RoundData15
 
-		self.ConvertData		= ACF.RoundTypes[self.RoundType].convert
-		self.BulletData		= self:ConvertData( PlayerData )
+		self.ConvertData    = ACF.RoundTypes[self.RoundType].convert
+		self.BulletData     = self:ConvertData( PlayerData )
 
 		self:BuildAmmoCapacity()
 
