@@ -693,3 +693,8 @@ r100
 - Increased energy and agility of stinger
 - Increased track cone of javelin
 - Fixed IRST giving lua errors.
+
+*r165
+- Added flare noise. Supported by the sound volume system.
+- Fixed textolite spamming alot of errors if impacted by heat shells.
+- Fixed IRST angle return. Now its provided in a local angle relative to itself.
